tests/baselines/reference/typeofClass(strict=true).errors.txt
typeofClass.ts(2,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
typeofClass.ts(7,1): error TS2454: Variable 'k1' is used before being assigned.
typeofClass.ts(8,1): error TS2454: Variable 'k1' is used before being assigned.
typeofClass.ts(8,4): error TS2576: Property 'bar' does not exist on type 'K'. Did you mean to access the static member 'K.bar' instead?
typeofClass.ts(10,1): error TS2454: Variable 'k2' is used before being assigned.
typeofClass.ts(10,4): error TS2339: Property 'foo' does not exist on type 'typeof K'.
typeofClass.ts(11,1): error TS2454: Variable 'k2' is used before being assigned.


==== typeofClass.ts (7 errors) ====
    class K {
        foo: number;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
        static bar: string;
    }
    
    var k1: K;
    k1.foo;
    ~~
!!! error TS2454: Variable 'k1' is used before being assigned.
    k1.bar;
    ~~
!!! error TS2454: Variable 'k1' is used before being assigned.
       ~~~
!!! error TS2576: Property 'bar' does not exist on type 'K'. Did you mean to access the static member 'K.bar' instead?
    var k2: typeof K;
    k2.foo;
    ~~
!!! error TS2454: Variable 'k2' is used before being assigned.
       ~~~
!!! error TS2339: Property 'foo' does not exist on type 'typeof K'.
    k2.bar;
    ~~
!!! error TS2454: Variable 'k2' is used before being assigned.